--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,5 +1,7 @@
 server {
-    listen 80 default_server;;
+    listen 80 default_server;
+    error_log /home/box/web/error.log;
+    access_log /home/box/web/access.log;
     location ﻿^~ /uploads/ ﻿{﻿
     ﻿root /home/box/web/;
     }
