--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -5,7 +5,7 @@ server {
     location ﻿^~ /uploads/ ﻿{﻿
     ﻿root /home/box/web/;
     }
-    location ~* ^.+\.(jpg|jpeg)$ {
+    location ~* ^.+\.(ico|jpeg|jpg|png|css|js)$ {
     root /home/box/web/public;
     location / {
     return 404;
