--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80 default;
     error_log /home/box/web/error.log;
     access_log /home/box/web/access.log;
-    location ﻿^~/uploads/ ﻿{﻿
+    location ^~ /uploads/ ﻿{﻿
     ﻿root /home/box/web/;
     }
     location ~*^.+\.(ico|jpeg|jpg|png|css|js)$ {
