--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -3,7 +3,7 @@ server {
     error_log /home/box/web/error.log;
     access_log /home/box/web/access.log;
     location ^~ /uploads/ ﻿{﻿
-    ﻿root /home/box/web/;
+    ﻿root /home/box/web;
     }
     location ~*^.+\.(ico|jpeg|jpg|png|css|js)$ {
     root /home/box/web/public;
