--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -5,7 +5,7 @@ server {
     location ^~ /uploads/ ﻿{﻿
     ﻿root /home/box/web;
     }
-    location ~* ^.+\.(jpg|jpeg|js)$ {
+    location ~* \.(jpg|jpeg)$ {
     root /home/box/web/public;
     }
 }
