--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -3,9 +3,9 @@ server {
     error_log /home/box/web/error.log;
     access_log /home/box/web/access.log;
     location ^~ /uploads/ ﻿{﻿
-    ﻿root /home/box/web;
+    ﻿root /home/box/web/;
     }
     location ~* \.(jpg|jpeg)$ {
-    root /home/box/web/public;
+    root /home/box/web/public/;
     }
 }
