--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -2,10 +2,13 @@ server {
     listen 80 default;
     error_log /home/box/web/error.log;
     access_log /home/box/web/access.log;
-    location ^~ /uploads/ ﻿{﻿
-    ﻿root /home/box/web/;
+    location / {
+        return 404;
     }
-    location ~* \.(jpg|jpeg)$ {
-    root /home/box/web/public/;
+    location ﻿^~ /uploads/ ﻿{﻿
+        root /home/box/web/;
+    }
+    location ~* ^.+\.\w+$ {
+        root /home/box/web/public/;
     }
 }
