--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -6,9 +6,9 @@ server {
         return 404;
     }
     location ﻿^~ /uploads/ ﻿{﻿
-        root /home/box/web/;
+        root /home/box/web;
     }
     location ~* ^.+\.\w+$ {
-        root /home/box/web/public/;
+        root /home/box/web/public;
     }
 }
