--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,9 +1,14 @@
 server {
-    listen 80;
-    location ﻿^~ /uploads/ ﻿{﻿
+    listen 80 default;
+    error_log /home/box/web/error.log;
+    access_log /home/box/web/access.log;
+    location / {
+        return 404;
+    }
+    location ^~ /uploads/ ﻿{﻿
         root /home/box/web;
     }
-    location ~* ^.+\.\w+$ {
-        root /home/box/web/public;
+    location ~* ^.+\.(jpg|jpeg)$ {
+        root /home/box/web/public/
     }
 }
