--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,11 +1,9 @@
 server {
-    listen 80 default;
-    error_log /home/box/web/error.log;
-    access_log /home/box/web/access.log;
-    location / {
-        return 404;
+    listen 80;
+    location ^~ /uploads/ {
+    root /home/box/web/;
     }
-    location ~* ^.+\.(jpg|jpeg)$ {
-        root /home/box/web/public/
-        }
+    location ~* ^.+\.(jpg|jpeg|gif|png)$ {
+    root /home/box/web/public/;
+    }
 }
