--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,5 +1,7 @@
 server {
     listen 80;
+    access_log var/log/nginx.access_log;
+    error_log var/log/nginx.error_log info;
     location ^~ /uploads/ {
     root /home/box/web/;
     }
