--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -5,7 +5,7 @@ server {
     location ^~ /uploads/ {
     root /home/box/web/;
     }
-    location ~* ^.+\.\w+*$ {
+    location ~* \.[a-zA-Z]+$ {
     root /home/box/web/public/;
     }
 }
